<project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.andirady.pomcli</groupId>
    <artifactId>pomcli</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
        <picocli.version>4.6.1</picocli.version>
        <exec.mainClass>com.github.andirady.pomcli.Main</exec.mainClass>
    </properties>
    <dependencies>
        <dependency>
            <groupId>info.picocli</groupId>
            <artifactId>picocli</artifactId>
            <version>${picocli.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.12.5</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.12.5</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-afterburner</artifactId>
            <version>2.12.5</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.8.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>--add-opens com.github.andirady.pomcli/com.github.andirady.pomcli=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.0.0-M5</version>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <!-- Experimental -->
            <id>graalvm</id>
            <properties>
                <graalvm.version>21.2.0</graalvm.version>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <source>${maven.compiler.source}</source>
                            <target>${maven.compiler.target}</target>
                            <annotationProcessorPaths>
                                <annotationProcessorPath>
                                    <groupId>info.picocli</groupId>
                                    <artifactId>picocli-codegen</artifactId>
                                    <version>${picocli.version}</version>
                                </annotationProcessorPath>
                            </annotationProcessorPaths>
                            <compilerArgs>
                                <arg>-Aproject=${project.groupId}/${project.artifactId}</arg>
                            </compilerArgs>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.graalvm.nativeimage</groupId>
                        <artifactId>native-image-maven-plugin</artifactId>
                        <version>${graalvm.version}</version>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>native-image</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <imageName>pom</imageName>
                            <mainClass>com.github.andirady.pomcli.Main</mainClass>
                            <buildArgs>
								--enable-http
								--enable-https
								--report-unsupported-elements-at-runtime
                                -H:Log=registerResource
							</buildArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>jlink</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-jlink-plugin</artifactId>
                        <version>3.1.0</version>
                        <executions>
                            <execution>
                                <id>jlink</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>jlink</goal>
                                </goals>
                                <configuration>
                                    <classifier>jlink</classifier>
                                    <modulePaths>${project.build.directory}/modules</modulePaths>
                                    <launcher>pom=com.github.andirady.pomcli/com.github.andirady.pomcli.Main</launcher>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
